--- a/float.css
+++ b/float.css
@@ -7,32 +7,28 @@
 	padding-right: 20px;
 	margin: 0 auto;
 }
-.row::before,
-.row::after {
+.row:before,
+.row:after {
 	display: table;
 	content: '';
 }
-.row::after {
+.row:after {
 	clear: both;
 }
-.col-3, .col-4, .col-6, .col-12 {
+[class*='col-'] {
 	float:left;
-	padding-right: 1.04166666%;
-	padding-left: 1.04166666%;
 }
-.col-3, .col-4, .col-6, .col-12 {
+.col-12 {
 	width: 100%;
 }
+.col-4 {
+	width: 33.333333%;
+}
 @media only screen and (min-width: 640px) {
-	.col-3 {
-		width: 25%
-	}
 	.col-4 {
-		width: 33.333333%
-	}
-	.col-6 {
-		width: 50%;
+		width: 33.333333%;
 	}
 	.col-12 {
 		width: 100%;
 	}
+}
